test/Fail/Issue4163.err
Issue4163.agda:23.21-25: error: [UnequalTerms]
⊤ !=< ⊥
when checking that the expression unit has type ⊥
